# topological-coherence

./: .gitignore  AUDIT_CERTIFICATE.md  Cargo.toml  LICENSE  README.md  README_PYPI.md  SOCIAL_POSTS.md  SUBMISSION_INSTRUCTIONS.md  app.py  cormier_topological_coherence_2026.tex  cormier_topological_coherence_2026_mdpi.tex  cormier_topological_coherence_2026_v5.tex  cormier_topological_coherence_2026_v6.tex  cover_letter_quantum_reports.tex  post  pyproject.toml  requirements.txt  setup_and_run.sh
diagrams/: results.dot
docs/: T2_UNIFICATION.md  UNIFIED_THEORY.md
docs/diagrams/: unified_operator.md
experiments/: EXPERIMENT_REPORT.md  EXPERIMENT_REPORT_v2.md  FEASIBILITY_REPORT.md  FEASIBILITY_REPORT_v2.md  KARMONIC_LLM_PLAN.md  README.md  analyze_tokenizers.py  cnt_quantum_simulation.py  coherence_test_fp16.py  debug_load.py  detect_torus_structure.py  eval_checkpoint.py  fix_and_test.py  gemma2_tlb.py  llama3_tlb.py  llm_toroidal_attention.py  manual_toroidal.py  modern_toroidal.py  ouro_tlb.py  ouro_tlb_fine.py  ouro_tlb_truthfulqa.py  ouro_toroidal_loops.py  ouro_toroidal_v2.py  ouro_toroidal_v3.py  quick_test.py  qwen3_olmo_test.py  requirements.txt  run_all_experiments.py  run_embedding_torus_test.py  run_enigma_karmonic.sh  run_frequency_bias_test.py  run_full_validation.py  run_karmonic_llm.sh  run_limited_bias_test.py  run_on_runpod.sh  run_optimal_olmo.py  run_smart_bias_test.py  run_truthfulqa_eval.py  run_truthfulqa_generation.py  runpod_llama3.sh  (+13 more)
huggingface-space/: README.md  app.py  requirements.txt
paper/: TOROIDAL_COHERENCE_PAPER_2026.md  VERIFICATION_METHODOLOGY.md  ZENODO_DESCRIPTION.md  ZENODO_KARMONIC_LLM.md  cormier_toroidal_llm_geometry_2026.tex  toroidal_hallucination_reduction_2026.tex
presentation/: coherence.html
results/: OLMO_FIXED_20260206.md  OLMO_RESULTS_20260206.md  QWEN_RESULTS_20260206.md  VALIDATED_RESULTS_20260206.md  full_benchmark_results_v2.json  gemma2_tlb_20260214_172533.json  generate_charts.py  ouro_toroidal_20260213_215452.json  ouro_toroidal_20260214_033353.json  ouro_toroidal_v2_20260214_060027.json  ouro_toroidal_v3_20260214_064632.json
src/: lib.rs
src/topological_coherence/: __init__.py  drift.py  (+5 more)
(+35 files in other folders)
